_generated-doc/2.7/config/quarkus-reactive-mysql-client.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-mysql-client_configuration]]link:#quarkus-reactive-mysql-client_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-reactive-mysql-client_quarkus.datasource.reactive.mysql.charset]]`link:#quarkus-reactive-mysql-client_quarkus.datasource.reactive.mysql.charset[quarkus.datasource.reactive.mysql.charset]`

[.description]
--
Charset for connections.
--|string 
|


a| [[quarkus-reactive-mysql-client_quarkus.datasource.reactive.mysql.collation]]`link:#quarkus-reactive-mysql-client_quarkus.datasource.reactive.mysql.collation[quarkus.datasource.reactive.mysql.collation]`

[.description]
--
Collation for connections.
--|string 
|


a| [[quarkus-reactive-mysql-client_quarkus.datasource.reactive.mysql.ssl-mode]]`link:#quarkus-reactive-mysql-client_quarkus.datasource.reactive.mysql.ssl-mode[quarkus.datasource.reactive.mysql.ssl-mode]`

[.description]
--
Desired security state of the connection to the server. 
 See link:https://dev.mysql.com/doc/refman/8.0/en/connection-options.html#option_general_ssl-mode[MySQL Reference Manual].
--|`disabled`, `preferred`, `required`, `verify-ca`, `verify-identity` 
|`disabled`


h|[[quarkus-reactive-mysql-client_quarkus.datasource.named-data-sources-additional-named-datasources]]link:#quarkus-reactive-mysql-client_quarkus.datasource.named-data-sources-additional-named-datasources[Additional named datasources]

h|Type
h|Default

a| [[quarkus-reactive-mysql-client_quarkus.datasource.-datasource-name-.reactive.mysql.charset]]`link:#quarkus-reactive-mysql-client_quarkus.datasource.-datasource-name-.reactive.mysql.charset[quarkus.datasource."datasource-name".reactive.mysql.charset]`

[.description]
--
Charset for connections.
--|string 
|


a| [[quarkus-reactive-mysql-client_quarkus.datasource.-datasource-name-.reactive.mysql.collation]]`link:#quarkus-reactive-mysql-client_quarkus.datasource.-datasource-name-.reactive.mysql.collation[quarkus.datasource."datasource-name".reactive.mysql.collation]`

[.description]
--
Collation for connections.
--|string 
|


a| [[quarkus-reactive-mysql-client_quarkus.datasource.-datasource-name-.reactive.mysql.ssl-mode]]`link:#quarkus-reactive-mysql-client_quarkus.datasource.-datasource-name-.reactive.mysql.ssl-mode[quarkus.datasource."datasource-name".reactive.mysql.ssl-mode]`

[.description]
--
Desired security state of the connection to the server. 
 See link:https://dev.mysql.com/doc/refman/8.0/en/connection-options.html#option_general_ssl-mode[MySQL Reference Manual].
--|`disabled`, `preferred`, `required`, `verify-ca`, `verify-identity` 
|`disabled`

|===